2007-08-24  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/Util.py: More ElementTree imports cleanup

2007-08-19  Michal Ludvig  <michal@logix.cz>

	* NEWS: Added news for 0.9.5

2007-08-19  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Better handling of multiple arguments for put, get and del

2007-08-14  Michal Ludvig  <michal@logix.cz>

	* setup.py, S3/Utils.py: Try import xml.etree.ElementTree
	  or elementtree.ElementTree module.

2007-08-14  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: Add info about --encrypt parameter.

2007-08-14  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bump up version to 0.9.5-pre

2007-08-13  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.4
	  ----------------------

2007-08-13  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Added function urlencode_string() that encodes
	  non-ascii characters in object name before sending it to S3.

2007-08-13  Michal Ludvig  <michal@logix.cz>

	* README: Updated Amazon S3 pricing overview

2007-08-13  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/Config.py, S3/S3.py: HTTPS support

2007-07-20  Michal Ludvig  <michal@logix.cz>

	* setup.py: Check correct Python version and ElementTree availability.

2007-07-05  Michal Ludvig  <michal@logix.cz>

	* s3cmd: --configure support for Proxy
	* S3/S3.py: HTTP proxy support from
	  John D. Rowell <jdrowell@exerciseyourbrain.com>

2007-06-19  Michal Ludvig  <michal@logix.cz>

	* setup.py: Check for S3CMD_PACKAGING and don't install
	  manpages and docs if defined.
	* INSTALL: Document the above change.
	* MANIFEST.in: Include uncompressed manpage

2007-06-17  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Added encryption key support to --configure
	* S3/PkgInfo.py: Bump up version to 0.9.4-pre
	* setup.py: Cleaned up some rpm-specific stuff that 
	  caused problems to Debian packager Mikhail Gusarov
	* setup.cfg: Removed [bdist_rpm] section
	* MANIFEST.in: Include S3/*.py

2007-06-16  Michal Ludvig  <michal@logix.cz>
